--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
   </head>
   <body>
       <div>
-        <h1>Discover hidden places in the world around you</h1>
-        <p><a href="https://ituuviekm83p1hf47hnfil6ug1jcf8li5dtknttqgfrm5bjlm6qg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+            <h1>Discover hidden places in the world around you</h1>
+            <p><a href="https://ituuviekm83p1hf47hnfil6ug1jcf8li5dtknttqgfrm5bjlm6qg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+            <video controls>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+            </video>
       </div>
+      <div>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="resources/images/camp.jpg" alt="Camping"/>
+      </div><br />
+      <div>
+            <img src="resources/images/phone.png" alt="Icon of smartphone"/>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <p><a href="https://ituuviekm83p1hf47hnfil6ug1jcf8li5dtknttqgfrm5bjlm6qg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+      </div>
+      <p class="copyright">&copy; Excursion</p>
   </body>
 </html>
