--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             <h2>Coming Soon for iPhone and Android</h2>
             <p><a href="https://ituuviekm83p1hf47hnfil6ug1jcf8li5dtknttqgfrm5bjlm6qg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
       </div>
-      <p class="copyright">&copy; Excursion</p>
+      <footer>&copy; Excursion</footer>
   </body>
 </html>
